force-app/main/default/objects/Attendance_Record__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person Account로부터 Fan의 이름을 가져오는 필드</description>
    <inlineHelpText>Fan의 이름</inlineHelpText>
    <label>Fan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendance Records</relationshipLabel>
    <relationshipName>Attendance_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>