force-app/main/default/objects/Attendance_Record__c/fields/Last_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Admission_Date__c</fullName>
    <description>가장 최근의 경기장 입장 날짜</description>
    <inlineHelpText>가장 최근의 경기장 입장 날짜</inlineHelpText>
    <label>Last Admission Date</label>
    <summarizedField>Admission__c.Admission_Time__c</summarizedField>
    <summaryForeignKey>Admission__c.Attendance_Record__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>