force-app/main/default/objects/Attendance_Record__c/fields/Total_Admissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Admissions__c</fullName>
    <description>총 입장 수</description>
    <inlineHelpText>총 입장 수</inlineHelpText>
    <label>Total Admissions</label>
    <summaryForeignKey>Admission__c.Attendance_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>