force-app/main/default/objects/Attendance_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fan__c</columns>
    <columns>Total_Admissions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>